--- a/src/py_package/package.xml
+++ b/src/py_package/package.xml
@@ -13,6 +13,7 @@
   <test_depend>python3-pytest</test_depend>
   <test_depend>rclcpp</test_depend>
   <test_depend>std_msgs</test_depend>
+  <test_depend>geometry_msgs</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
