--- a/src/params.yaml
+++ b/src/params.yaml
@@ -1,7 +1,7 @@
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 20.0
+    controller_frequency: 0.5
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
@@ -19,7 +19,13 @@ controller_server:
       yaw_goal_tolerance: 0.25
       stateful: True
     FollowPath:
-      plugin: "nav2_apf_controller::ArtificialPotentialFieldController"
+      plugin: "nav2_py_controller::PyController"
+      python_module: "artificial_potential_field.artificial_potential_field"
+      python_delegates:
+        set_plan: "setPath"
+        set_speed_limit: "setSpeedLimit"
+        compute_velocity_commands: "computeVelocityCommands"
+        update_costmap: "neli"
 
 amcl:
   ros__parameters:
