--- a/src/nav2_pyif_controller/package.xml
+++ b/src/nav2_pyif_controller/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>nav2_py_controller</name>
+  <name>nav2_pyif_controller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="danel.leppenen@gmail.com">danel</maintainer>
