--- a/src/params.yaml
+++ b/src/params.yaml
@@ -1,7 +1,7 @@
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 0.5
+    controller_frequency: 10.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
@@ -11,21 +11,20 @@ controller_server:
 
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
-      movement_time_allowance: 10.0
+      required_movement_radius: 0.25
+      movement_time_allowance: 20.0
     goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.25
       stateful: True
     FollowPath:
-      plugin: "nav2_py_controller::PyController"
-      python_module: "artificial_potential_field.artificial_potential_field"
+      plugin: "nav2_pyif_controller::PYIFController"
+      python_module: "python_controller.apf"
       python_delegates:
         set_plan: "setPath"
         set_speed_limit: "setSpeedLimit"
         compute_velocity_commands: "computeVelocityCommands"
-        update_costmap: "neli"
 
 amcl:
   ros__parameters:
@@ -142,7 +141,7 @@ map_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
+      update_frequency: 20.0
       publish_frequency: 2.0
       global_frame: odom
       robot_base_frame: base_link
@@ -191,12 +190,12 @@ local_costmap:
       use_sim_time: True
   local_costmap_rclcpp_node:
     ros__parameters:
-      use_sim_time: True
+      use_sim_time: Truenav2_controller
 
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 1.0
+      update_frequency: 2.0
       publsih_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
@@ -253,7 +252,7 @@ map_saver:
 planner_server:
   ros__parameters:
     use_sim_time: True
-    expected_planner_frequency: 20.0
+    expected_planner_frequency: 1.0
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
