--- a/nav2_pyif_controller/package.xml
+++ b/nav2_pyif_controller/package.xml
@@ -9,10 +9,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>nav2_common</depend>
+  <depend>nav2_pyif</depend>
   <depend>nav2_core</depend>
   <depend>pluginlib</depend>
   <depend>PythonLibs</depend>
+  <depend>nav2_common</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
